# bgtest

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  check_environment.py  conftest.py  install_dependencies.py  pyproject.toml  pytest.ini  python_version_manager.py  quick_install.py  requirements.txt  requirements_complete.txt  run.py  setup.py
caseparams/: test_chat_gateway.yaml  test_dynamic_data_source.yaml  test_http_data.csv  test_unified_framework.yaml
common/: api_monitor.py  assertion.py  config.py  config_manager.py  data_driven_framework.py  data_source.py  dynamic_data_source_switcher.py  enhanced_data_source_switcher.py  fluent_data_source_switcher.py  get_caseparams.py  interface_chain.py  interface_config.py  log.py  mq_utils.py  orm_manager.py  requestdb.py  temp_utils.py  test_utils.py  yaml_utils.py
conf/: database.yaml  env.yaml  interface.ini  interface_info.yaml  mq.yaml
data_prepare/: data_factory.py  db_utils.py
design/: assertion_template.py  testcase_template.py
docs/: allure_decorators_standalone_fix.md  allure_enhancement_guide.md  allure_enhancement_summary.md  conftest_optimization_guide.md  conftest_optimization_summary.md  data_source_optimization.md  default_report_behavior.md  dependencies_analysis.md  dynamic_data_source_guide.md  dynamic_data_source_switcher_guide.md  dynamic_data_source_switcher_summary.md  enhanced_data_source_switcher_guide.md  enhanced_data_source_switcher_summary.md  orm_integration_guide.md  pytest_html_fix.md  report_generation_verification.md  report_structure_guide.md  run.py_implementation_summary.md  run.py_usage_guide.md  testcase_optimization_guide.md  unified_data_driven_guide.md  unified_framework_summary.md
execution/: conftest.py  executor.py
log/: api_monitor.log.2025-07-31  api_monitor.log.2025-08-01  api_monitor.log.2025-08-02  log.log.2025-07-31  log.log.2025-08-01  log.log.2025-08-02
testcase/: test_allure_basic.py  test_allure_simple.py  test_allure_with_decorators.py  test_assertion_utils.py  test_chat_gateway.py  test_chat_gateway_optimized.py  test_chat_gateway_with_dynamic_data.py  test_data_driven_example.py  test_data_source_switcher_example.py  test_dynamic_data_source.py  test_dynamic_data_source_switcher.py  test_enhanced_data_source_switcher.py  test_http_data.py  test_mixed_data_source.py  test_orm_integration.py  testcasetemplate.py
utils/: allure_decorators.py  allure_utils.py  conftest.py  get_excel_data_utils.py  http_utils.py  orm_fixtures.py  read_jsonfile_utils.py  sample.json  sample_updated.json  test_decorators.py  (+1 more)
(+1516 files in other folders)
